Removed immutables related hibernate annotation injection